# tree-sitter-chaiscript

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-chaiscript.h  tree-sitter-chaiscript.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_chaiscript/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterChaiscriptTests/: TreeSitterChaiscriptTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: built_ins.txt  for_loop.txt  function_definition.txt  numbers.txt  switch.txt  variable_declaration.txt  while_loop.txt
