[package]
name = "tree-sitter-chaiscript"
description = "A parser for the ChaiScript scripting language"
version = "0.1.0"
authors = ["Simon König <31983081+SerenGTI@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "chaiscript"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/SerenGTI/tree-sitter-chaiscript"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
